--- a/index.html
+++ b/index.html
@@ -14,13 +14,26 @@
 
 <body>
     <header>
-        <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
-        </div>
+
+        <nav>
+            <div>
+                <a href="./index.html"><img src="./assets/logo.png">Delicious <br />The Best Food Blog On The Web</a>
+            </div>
+            <div class="right-nav-div">
+                <a href="#"><img src="./assets/fb-icon.png"></a>
+                <a href="#"><img src="./assets/twit-icon.png"></a>
+                <a href="#"><img src="./assets/gp-icon.png"></a>
+                <a href="#"><img src="./assets/insta-icon.png"></a>
+                <a href="#"><img src="./assets/flic-icon.png"></a>
+                <a href="#"><img src="./assets/pint-icon.png"></a>
+                <a href="#"><img src="./assets/rss-icon.png"></a>
+                <a href="#"><img src="./assets/mail-icon.png"></a>
+            </div>
+        </nav>
     </header>
+    <div class="hr-div"></div>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="./assets/alchemy-logo.png" />
             <h2>
                 Welcome to Alchemy Bootstrap!
             </h2>
