add minor styling

--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
     <div class="hr-div"></div>
     <main>
         <section class="main-section">
-            <h1>Chocolate Pizza</h1>
-            <h5>Posted on 15 dec 2013 / desserts</h5>
+            <header class="article-header">
+                <div class="article-title">
+                    <h1>Chocolate Pizza</h1>
+                    <h5>Posted on 15 dec 2013 / desserts</h5>
+                </div>
+                <div class="print-div">
+                    <a href="#"><img src="./assets/print-icon.png">print</a>
+                </div>
+            </header>
             <img src="./assets/choco-pizza.png">
 
             <p>
