--- a/index.html
+++ b/index.html
@@ -46,14 +46,39 @@
             <img src="./assets/choco-pizza.png">
 
             <p>
-                For the fig-swirl: Melt butter over medium ehat in a saucepan. Add brown sugar and stir to dissolve. Hale all of the figs and toss in the saucepan wtih water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
+                For the fig-swirl: Melt butter over medium ehat in a saucepan. Add brown sugar and stir to dissolve.
+                Hale all of the figs and toss in the saucepan wtih water and lemon juice. Cook over medium heat,
+                stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside
+                and let cool completely.
             </p>
             <p>
-                Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
+                Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely
+                dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and
+                wait until the fig mixture is cooled.
             </p>
             <p>
-                Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.
+                Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer
+                instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and
+                the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass
+                tupperware. Freeze for at least two hours before serving.
             </p>
+            <div id="background-image">
+                <div id="recipe1">
+                    <input type="checkbox"> 1 1/2 Cups Milk
+                    <input type="checkbox"> 1/2 Cup of Mascarpone
+                    <input type="checkbox"> 1/2 Tsp Pink Salt
+                    <input type="checkbox"> 1lb Black Mission Figs
+                    <input type="checkbox"> 1/2 Cup Brown Sugar
+                    <input type="checkbox"> 2-4 Tsp Water
+                </div>
+                <div id="recipe2">
+                    <input type="checkbox"> 1 1/2 Cups Heavy Cream
+                    <input type="checkbox"> 1/3 Granulated Sugar
+                    <input type="checkbox"> 2 Eggs yolked
+                    <input type="checkbox"> 2 Tsp Butter
+                    <input type="checkbox"> 1 cup honey roasted pecans, Roughly chopped
+                </div>
+            </div>
         </section>
     </main>
     <footer>
