--- a/index.html
+++ b/index.html
@@ -79,10 +79,21 @@
                     <input type="checkbox"> 1 cup honey roasted pecans, Roughly chopped
                 </div>
             </div>
+            <div class="hr-div"></div>
+            <div id="article-footer">
+                <img src="./assets/van-pic.png" alt="vanessa" id="van-pic">
+                <div id="vanessa">
+                    <h4 id="h4">Vanessa Stevenson </h4>
+                    <p id="van-p"> Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much
+                        who i am.
+                    </p>
+                </div>
+                <button id="share-button"> Share Recipe</button>
+            </div>
         </section>
+
     </main>
     <footer>
-        <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
     </footer>
 
     <script type="module" src="./app.js"></script>
