--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
                 tupperware. Freeze for at least two hours before serving.
             </p>
             <div id="background-image">
-                <div id="recipe1">
-                    <input type="checkbox"> 1 1/2 Cups Milk
-                    <input type="checkbox"> 1/2 Cup of Mascarpone
-                    <input type="checkbox"> 1/2 Tsp Pink Salt
-                    <input type="checkbox"> 1lb Black Mission Figs
-                    <input type="checkbox"> 1/2 Cup Brown Sugar
-                    <input type="checkbox"> 2-4 Tsp Water
+                <div class="recipe-column">
+                    <span><input type="checkbox"> 1 1/2 Cups Milk</span>
+                    <span><input type="checkbox"> 1/2 Cup of Mascarpone</span>
+                    <span><input type="checkbox"> 1/2 Tsp Pink Salt</span>
+                    <span><input type="checkbox"> 1lb Black Mission Figs</span>
+                    <span><input type="checkbox"> 1/2 Cup Brown Sugar</span>
+                    <span><input type="checkbox"> 2-4 Tsp Water</span>
                 </div>
-                <div id="recipe2">
-                    <input type="checkbox"> 1 1/2 Cups Heavy Cream
-                    <input type="checkbox"> 1/3 Granulated Sugar
-                    <input type="checkbox"> 2 Eggs yolked
-                    <input type="checkbox"> 2 Tsp Butter
-                    <input type="checkbox"> 1 cup honey roasted pecans, Roughly chopped
+                <div class="recipe-column">
+                    <span><input type="checkbox"> 1 1/2 Cups Heavy Cream</span>
+                    <span class="line-through"><input type="checkbox" checked> 1/3 Granulated Sugar</span>
+                    <span class="line-through"><input type="checkbox" checked> 2 Eggs yolked</span>
+                    <span><input type="checkbox"> 2 Tsp Butter</span>
+                    <span><input type="checkbox"> 1 cup honey roasted pecans, Roughly chopped</span>
                 </div>
             </div>
             <div class="hr-div"></div>
