--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     <header>
 
         <nav>
-            <div>
-                <a href="./index.html"><img src="./assets/logo.png">Delicious <br />The Best Food Blog On The Web</a>
+            <div id="logo-div">
+                <a href="./index.html" id="logo-a"><img src="./assets/logo.png">
+                    <div id="Delicious">
+                        <h2>Delicious</h2> <br /><span id="best-food">The Best Food Blog On The Web</span>
+                    </div>
+                </a>
+
             </div>
             <div class="right-nav-div">
                 <a href="#"><img src="./assets/fb-icon.png"></a>
