--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400&family=Yellowtail&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/home.css">
@@ -19,7 +23,8 @@
             <div id="logo-div">
                 <a href="./index.html" id="logo-a"><img src="./assets/logo.png">
                     <div id="Delicious">
-                        <h2>Delicious</h2> <br /><span id="best-food">The Best Food Blog On The Web</span>
+                        <h2>Delicious</h2>
+                        <span id="best-food">The Best Food Blog On The Web</span>
                     </div>
                 </a>
 
